Vista para ver todos los empleados

--- a/syles.css
+++ b/syles.css
@@ -1,5 +1,5 @@
-#crearBoton, #editarBoton, #borrarBoton{
-    margin-left: 360px;
+#crearBoton, #editarBoton, #borrarBoton, #verBoton{
+    margin-left: 300px;
 }
 
 .container{
