Vistas de la pagina

--- a/Front/syles.css
+++ b/Front/syles.css
@@ -1,4 +1,4 @@
-#crearBoton, #editarBoton, #borrarBoton, #verBoton{
+#asistDocenteBoton, #asistPasanteBoton, #asistEquipoBoton, #verBoton{
     margin-left: 300px;
 }
 
