Muchas cosas actualizadas

--- a/Front/syles.css
+++ b/Front/syles.css
@@ -6,6 +6,6 @@
     margin-top: 50px;
 }
 
-#tablaDatosDocente, #tablaDatosEstudiante{
+#tablaDatosDocente, #tablaDatosEstudiante, #tablaDatosEquipo{
     margin-top: 50px;
 }
